# stark-bot-native

./: Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  db.rs  event.rs  main.rs  render.rs  starflask.rs  theme.rs
src/commands/: agents.rs  config_cmd.rs  mod.rs  provision.rs  query.rs  setup.rs
src/ui/: agents.rs  app.rs  chat.rs  command_hint.rs  header.rs  help.rs  input.rs  message.rs  messages.rs  mod.rs  spinner.rs  status_bar.rs  theme.rs
