[package]
name = "stark-bot"
version = "2.1.0"
edition = "2024"

[[bin]]
name = "stark-bot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
dotenvy = "0.15"
iocraft = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smol = "2"
async-tungstenite = { version = "0.28", features = ["async-std-runtime", "async-tls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
